--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</p>
 			</td>
 		<td>
-		<img src="./pic/portrait.jpg" border="0" width="240"><br>
+		<img src="./pic/jialian.jpg" border="0" width="240"><br>
 		</td>
 		</tr><tr>
 	</tr></tbody>
