--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="keywords" content="Tiancai Wang, Tianjin University"> 
 <meta name="description" content="Tiancai Wang&#39;s home page">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
-<title>Tiancai Wang, Tianjin University</title>
+<title>Jialian Wu, State University of New York at Buffalo</title>
 <script async="" src="./css/analytics.js.涓嬭浇"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
