--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta name="keywords" content="Tiancai Wang, Tianjin University"> 
-<meta name="description" content="Tiancai Wang&#39;s home page">
+<meta name="keywords" content="Jialian Wu, State University of New York at Buffalo">
+<meta name="description" content="Jialian Wu&#39;s home page">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
 <title>Jialian Wu, State University of New York at Buffalo</title>
 <script async="" src="./css/analytics.js.涓嬭浇"></script><script>
@@ -23,10 +23,10 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1><font face="Arial"> Tiancai Wang</font></h1>
+					<h1><font face="Arial"> Jialian Wu</font></h1>
 				</div>
 
-				<h3><font face="Arial"> Research Intern at MEGVII </font></h3>
+				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
 				<p><font face="Arial"> 
 				Tianjin University </br>
 					<em>Email: <a href="mailto:wangtc@tju.edu.cn">wangtc [at] tju [dot] edu [dot] cn</a></em> <br>
