--- a/index.html
+++ b/index.html
@@ -55,78 +55,33 @@
 <ul style="list-style-type:none"> -->
 	
     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Learning Human-Object Interaction Detection using Interaction Points <br> 
-         <i>   <b>Tiancai Wang</b>, Tong Yang, Martin Danelljan, Fahad Shahbaz Khan, Xiangyu Zhang, Jian Sun </i><br> 
+            Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians <br>
+         <i>   <b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan </i><br>
 	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020. <br>
+		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>]
+		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>]
 	 </font>
 	 </p> </li>
 	
      <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Deep Contextual Attention for Human-Object Interaction Detection <br> 
-         <i>   <b>Tiancai Wang*</b>, Rao Muhammad Anwer*, Muhammad Haris Khan, Fahad Shahbaz Khan, Yanwei Pang, Ling Shao </i><br> 
-	       IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019. <br>
-	  [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Wang_Deep_Contextual_Attention_for_Human-Object_Interaction_Detection_ICCV_2019_paper.pdf">paper</a>]
+            Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation <br>
+         <i>   <b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan </i><br>
+	       ACM International Conference on Multimedia (<b>ACM MM</b>), 2020. <br>
+	  [<a href="https://arxiv.org/abs/2008.05676">PDF</a>]
+		 [<a href="https://github.com/JialianW/Forest_RCNN">Code</a>]
 	  </font>
 	 </p> </li>
 	
      <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Learning Rich Features at High-Speed for Single-Shot Object Detection <br> 
-         <i>   <b>Tiancai Wang*</b>, Rao Muhammad Anwer*, Hisham Cholakkal, Fahad Shahbaz Khan, Yanwei Pang, Ling Shao </i><br> 
-	       IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019. <br>
-	  [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Wang_Learning_Rich_Features_at_High-Speed_for_Single-Shot_Object_Detection_ICCV_2019_paper.pdf">paper</a>]
+            Self-Mimic Learning for Small-scale Pedestrian Detection <br>
+         <i>   <b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan </i><br>
+	       ACM International Conference on Multimedia (<b>ACM MM</b>), 2020. <br>
+	  [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>]
+		 [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>]
 	  </font>
 	 </p> </li>
-	
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Efficient Featurized Image Pyramid Network for Single Shot Detector <br> 
-         <i>  Yanwei Pang*, <b>Tiancai Wang*</b>, Rao Muhammad Anwer, Fahad Shahbaz Khan, Ling Shao </i><br> 
-	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019. <br>
-	 [<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Pang_Efficient_Featurized_Image_Pyramid_Network_for_Single_Shot_Detector_CVPR_2019_paper.pdf">paper</a>]
-	  </font>
-	 </p> </li>	
-	
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Collective neurodynamic optimization for economic emission dispatch problem considering valve point effect in microgrid <br> 
-         <i>   <b>Tiancai Wang</b>, Xing He, Tingwen Huang, Chuandong Li, Wei Zhang </i><br> 
-	       Neural Networks (<b>NN</b>), 2017. <br>
-	 [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0893608017301077">paper</a>]
-	  </font>
-	 </p> </li>	
 	
 
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Complex dynamical behavior of neural networks in circuit implementation <br> 
-         <i>   <b>Tiancai Wang</b>, Xing He, Tingwen Huang  </i><br> 
-	       Neurocomputing, 2016. <br>
-	 [<a href="https://www.sciencedirect.com/science/article/pii/S0925231216000771">paper</a>]
-	 </font>
-	 </p> </li>	
-
-	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Neural networks for power management optimal strategy in hybrid microgrid <br> 
-         <i>   <b>Tiancai Wang</b>, Xing He, Ting Deng </i><br> 
-	       Neural Comput & Applic, 2017. <br>
-	 [<a href="https://link.springer.com/article/10.1007/s00521-017-3219-x">paper</a>] </font>
-	 </p> </li>	
-	
-	
-     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Circuit implementation of digitally programmable transconductance amplifier in analog simulation of reaction-diffusion neural model  <br> 
-         <i>  Miao Sun, Xing He, <b>Tiancai Wang</b>, Tingwen Huang </i><br> 
-              Neurocomputing, 2017. <br>
-	 [<a href="https://www.sciencedirect.com/science/article/pii/S0925231216313534">paper</a>] </font>
-	 </p> </li>
-	
-	
-     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Neural Network Optimization for Energy-Optimal Cooperative Computing in Wireless Communication System  <br> 
-         <i>  Yachen He, Xing He, <b>Tiancai Wang</b> </i><br> 
-              Neurocomputing, 2017. <br>
-	 [<a href="https://www.sciencedirect.com/science/article/pii/S1434841117321891">paper</a>] </font>
-	 </p> </li>
 
 </ul>
 
@@ -157,14 +112,14 @@
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
               <strong> Conference Reviews </strong> <br> </font> </p> 
 	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 CVPR 2020, ISNN 2016
+		 CVPR 2020, WACV 2021, ACCV 2020
 	      </font> </p> 
          </li>
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
               <strong> Journal Reviews </strong> <br> </font> </p> 
 	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 Neurocomputing, Science China
+		 IEEE Transactions on Image Processing
 	      </font> </p> 
          </li>
 	
