--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
          </li>
 	
 	<center>
-	<a href="https://clustrmaps.com/site/1ayw3" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Z3XUPfRyDp0IXaNiGNN5bwWbjUxiXROBRoYKJY_mQUE&cl=ffffff" /></a>
+	<a href="http://www.clustrmaps.com/map/Jialianwu.com" title="Visit tracker for Jialianwu.com"><img src="//www.clustrmaps.com/map_v2.png?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU" /></a>
 	</center>
 	
 	<p></p><center><font face="Arial">
         <br>
-            © Tiancai Wang | Last updated: Jun. 2019
+            © Jialian Wu | Last updated: Aug. 2020
         </font></center><p></p>
 		
 </center></div>
