--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 				<p><font face="Arial"> 
 				Tianjin University </br>
 					<em>Email: <a href="mailto:wangtc@tju.edu.cn">wangtc [at] tju [dot] edu [dot] cn</a></em> <br>
-				<!<p> <a href="https://scholar.google.com.hk/citations?user=YI0sRroAAAAJ&hl=zh-CN"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://www.linkedin.com/in/tiancai-wang-91b807165/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://www.researchgate.net/profile/Tiancai_Wang?ev=hdr_xprf&_sg=L0VkmPVguuXQJg-ik0MvE3hUqHpMSkcGVJNm7KxE8FG7O8juuQccOog2M_Bog-JZ3yNjWRb-dTC4TE6keoe9BQOK"><img src="./pic/researgate.png" height="30px" style="margin-bottom:-3px"></a>
+				<!<p> <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
 		<td>
