--- a/index.html
+++ b/index.html
@@ -84,23 +84,15 @@
 </ul>
 
 
-<h2><font face="Arial"> Honors &amp; Awards </font></h2>
+<h2><font face="Arial"> Research Experiences </font></h2>
 
     <ul style="list-style-type:none">
-    <p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;"> <font face="Arial" size="3">
-      </font></p><li><font face="Arial" size="3">
-		Outstanding Graduates, Southwest University (top 1%), 2017.
-      </font></li><font face="Arial" size="3">
-      <li>
-	        National Encouragement Scholarship, 2016.
-      </li>
-      <li>
-		First place, Mathematical Modeling Contest, 2016.
-      </li>
-      <li>
-		2nd Prize Winner for the University’s Bachelor Thesis Award, Southwest University (top 2%), 2017
-      </li>
-      </font><p></p>
+	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Research Intern at Horizon Robotics </strong> <br> </font> </p>
+	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 at CA and Beijing
+	      </font> </p>
+         </li>
     </ul>
 
 
