--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
 				<p><font face="Arial"> 
 				State University of New York at Buffalo </br>
-					<em>Email: <a href="mailto:wangtc@tju.edu.cn">wangtc [at] tju [dot] edu [dot] cn</a></em> <br>
+					<em>Email: jialianw at buffalo dot edu</em> <br>
 				<!<p> <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
