--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <br>
 
 <p style="text-align:justify" ;=""><font face="Arial">
-	I obtained the MSc. degree from Tianjin University </a> at January 2020. Before that, I received the B.Eng. degree from Southwest University in 2017. Previously I was a research intern at Inception Institute of Artificial Intelligence (IIAI), Abu Dhabi, UAE. Now I am a research intern at MEGVII. My research interests include: Computer Vision, Object Detection, Human Object Interaction and Instance Segmentation.
+	I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. Junsong Yuan.
+Before that, I was a M.S. student at Tianjin University from 2018 to 2019 and left for UB in July 2019 before finishing my degree.
+I received B.Eng. degree from Tianjin University in 2018. My current research interest is object recognition including detection, segmentatoin, and tracking.
 </font></p>
 
 <h2><font face="Arial"> Publications </font></h2>
