--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Jialian Wu&#39;s home page">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
 <title>Jialian Wu, State University of New York at Buffalo</title>
-<script async="" src="./css/analytics.js.涓嬭浇"></script><script>
+<script async="" src="./css/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -15,7 +15,7 @@
   ga('send', 'pageview');
 
 </script>
-<script type="text/javascript" src="./css/jquery.min.js.涓嬭浇"></script></head>
+<script type="text/javascript" src="./css/jquery.min.js"></script></head>
 <body>
 <div id="layout-content" style="margin-top:25px">
 <table>
@@ -23,14 +23,12 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1><font face="Arial"> Jialian Wu</font></h1>
+					<h1><font face="Arial"> Jialian Wu (吴嘉濂)</font></h1>
 				</div>
-
+				<h3><font face="Arial"> (<em>pronunciation: jar-liam wu</em>)</font></h3>
 				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
-				<p><font face="Arial"> 
-				State University of New York at Buffalo </br>
-					<em>Email: jialianw at buffalo dot edu</em> <br>
-				<!<p> <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
+				<p><font face="Arial">Email: jialianw at buffalo dot edu <br>
+				 <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
 		<td>
