--- a/index.html
+++ b/index.html
@@ -88,9 +88,16 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
     <ul style="list-style-type:none">
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Research Intern at Horizon Robotics </strong> <br> </font> </p>
-	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-		 at CA and Beijing
+              <strong> Research Intern, Applied AI Lab, Horizon Robotics, San Francisco Bay Area.</strong> <br> </font> </p>
+	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 <em>May-August, 2020.</em> Mentor: <a href="https://scholar.google.com/citations?user=uNj2w9gAAAAJ&hl=en">Yu Wang</a>.
+	      </font> </p>
+         </li>
+
+		<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+              <strong> Research Intern, Horizon Robotics, Beijing.</strong> <br> </font> </p>
+	      <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
+		 <em>May-August, 2018.</em> Mentor: <a href="https://scholar.google.com/citations?user=pCY-bikAAAAJ&hl=zh-CN">Qian Zhang</a>.
 	      </font> </p>
          </li>
     </ul>
