--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <br>
 
 <p style="text-align:justify" ;=""><font face="Arial">
-	I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. Junsong Yuan.
+	I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
 Before that, I was a M.S. student at Tianjin University from 2018 to 2019 and left for UB in July 2019 before finishing my degree.
 I received B.Eng. degree from Tianjin University in 2018. My current research interest is object recognition including detection, segmentatoin, and tracking.
 </font></p>
