--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1><font face="Arial"> Jialian Wu (吴嘉濂)</font></h1>
+					<h1><font face="Arial"> Jialian Wu (<font face="KaiTi">吴嘉濂</font>)</font></h1>
 				</div>
 				<h3><font face="Arial"> (<em>pronunciation: jar-liam wu</em>)</font></h3>
 				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
