--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<h3><font face="Arial"> (<em>pronunciation: jar-liam wu</em>)</font></h3>
 				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
 				<p><font face="Arial">Email: jialianw at buffalo dot edu <br>
-				 <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>
+<!--				 <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>-->
+					[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162/">Linkedin</a>]
 				</p>
 			</td>
 		<td>
