--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 				<h3><font face="Arial"> Ph.D. Candidate at State University of New York at Buffalo</font></h3>
 				<p><font face="Arial">Email: jialianw at buffalo dot edu <br>
 <!--				 <a href="https://www.linkedin.com/in/jialian-wu-0bb173162/"><img src="./pic/LinkedIn_s.png" height="30px" style="margin-bottom:-3px"></a>-->
-					[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162/">Linkedin</a>]
+					[<a href="https://github.com/JialianW">Github</a>] [<a href="https://www.linkedin.com/in/jialian-wu-0bb173162">Linkedin</a>]
+					[<a href="https://drive.google.com/file/d/1Tp7hLu1LOSbvv7rimGRlCaViEG7mMrpu/view?usp=sharing">Curriculum Vitae</a>]
 				</p>
 			</td>
 		<td>
