--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</p>
 			</td>
 		<td>
-		<img src="./pic/jialian.jpg" border="0" width="500"><br>
+		<img src="./pic/jialian2.jpg" border="0" width="500"><br>
 		</td>
 		</tr><tr>
 	</tr></tbody>
