--- a/index.html
+++ b/index.html
@@ -45,16 +45,30 @@
 
 <p style="text-align:justify" ;=""><font face="Arial">
 	I am a first-year Ph.D. student at State Univeristy of New York at Buffalo (UB), advised by Prof. <a href="https://cse.buffalo.edu/~jsyuan/index.html">Junsong Yuan</a>.
-Before that, I was a M.S. student at Tianjin University from 2018 to 2019 and left for UB in July 2019 before finishing my degree.
+Before that, I spent one year on the M.S. study at Tianjin University during 2018-2019 and left for UB in July 2019 before finishing my degree.
 I received B.Eng. degree from Tianjin University in 2018. My current research interest is object recognition including detection, segmentatoin, and tracking.
 </font></p>
+
+
+
+
+
 
 <h2><font face="Arial"> Publications </font></h2>
 <ul style="list-style-type:none">
 <!--<p><font face="Arial">Summary: IEEE Transactions [2], CVPR [2].</font></p>
 <ul style="list-style-type:none"> -->
 	
-    <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
+<!--    	<li><div class="photo"><img src="./pic/jialian.jpg" border="0" width="100"></div>-->
+<!--	<div class="intro">-->
+<!--            Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians <br>-->
+<!--         <i>   <b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan </i><br>-->
+<!--	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020. <br>-->
+<!--		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>]-->
+<!--		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>]-->
+<!--	</div></li>-->
+
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
             Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians <br>
          <i>   <b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan </i><br>
 	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020. <br>
