--- a/index.html
+++ b/index.html
@@ -55,45 +55,64 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
 
 <h2><font face="Arial"> Publications </font></h2>
-<ul style="list-style-type:none">
+<!--<ul style="list-style-type:none">-->
+	<ul style="list-style:none;margin:0px;padding:0px;">
 <!--<p><font face="Arial">Summary: IEEE Transactions [2], CVPR [2].</font></p>
 <ul style="list-style-type:none"> -->
 	
-<!--    	<li><div class="photo"><img src="./pic/jialian.jpg" border="0" width="100"></div>-->
-<!--	<div class="intro">-->
-<!--            Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians <br>-->
-<!--         <i>   <b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan </i><br>-->
-<!--	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020. <br>-->
-<!--		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>]-->
-<!--		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>]-->
-<!--	</div></li>-->
-
-	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
+    	<li><div class="photo"><img src="./pic/cvpr20.png" border="0" width="300"></div>
+	<div class="intro">
             Temporal-Context Enhanced Detection of Heavily Occluded Pedestrians <br>
          <i>   <b>Jialian Wu</b>,Chunluan Zhou, Ming Yang, Qian Zhang, Yuan Li, and Junsong Yuan </i><br>
 	       IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020. <br>
 		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wu_Temporal-Context_Enhanced_Detection_of_Heavily_Occluded_Pedestrians_CVPR_2020_paper.pdf">PDF</a>]
 		[<a href="https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Wu_Temporal-Context_Enhanced_Detection_CVPR_2020_supplemental.pdf">supp</a>]
-	 </font>
-	 </p> </li>
-	
-     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
-            Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation <br>
+	</div></li>
+
+	    	<li><div class="photo2"><img src="./pic/Forest_Rcnn.png" border="0" width="300" ></div>
+	<div class="intro">
+           Forest R-CNN: Large-Vocabulary Long-Tailed Object Detection and Instance Segmentation <br>
          <i>   <b>Jialian Wu</b>, Liangchen Song, Tiancai Wang, Qian Zhang, and Junsong Yuan </i><br>
 	       ACM International Conference on Multimedia (<b>ACM MM</b>), 2020. <br>
 	  [<a href="https://arxiv.org/abs/2008.05676">PDF</a>]
 		 [<a href="https://github.com/JialianW/Forest_RCNN">Code</a>]
-	  </font>
-	 </p> </li>
-	
-     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">
+	</div></li>
+
+		    	<li><div class="photo3"><img src="./pic/SML.png" border="0" width="300"></div>
+	<div class="intro3">
             Self-Mimic Learning for Small-scale Pedestrian Detection <br>
          <i>   <b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan </i><br>
 	       ACM International Conference on Multimedia (<b>ACM MM</b>), 2020. <br>
 	  [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>]
 		 [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>]
-	  </font>
-	 </p> </li>
+	</div></li>
+
+<!--	     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3">-->
+<!--            Self-Mimic Learning for Small-scale Pedestrian Detection <br>-->
+<!--         <i>   <b>Jialian Wu</b>, Chunluan Zhou, Qian Zhang, Ming Yang, and Junsong Yuan </i><br>-->
+<!--	       ACM International Conference on Multimedia (<b>ACM MM</b>), 2020. <br>-->
+<!--	  [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML.pdf">PDF</a>]-->
+<!--		 [<a href="https://cse.buffalo.edu/~jsyuan/papers/2020/SML_supp.pdf">supp</a>]-->
+<!--	  </font>-->
+<!--	 </p> </li>-->
+
+
+
+
+<!--					<div class='row publication-entity'>-->
+<!--					<div class='col-xs-3'>-->
+<!--					  <img class="paper-image" src="pic/jialian.jpg">-->
+<!--					</div>-->
+<!--					<div class='col-xs-9'>-->
+<!--					  <div class='paper-title'>In Defense of the Triplet Loss Again: Learning Robust Person Re-Identification with Fast Approximated Triplet Loss and Label Distillation</div>-->
+<!--					  <div class='paper-authors'>Ye Yuan, <b>Wuyang Chen</b>, Yang Yang, Zhangyang Wang</div>-->
+<!--					  &lt;!&ndash; <div class='paper-venue'>WACV 2020</div> &ndash;&gt;-->
+<!--					  <div class='paper-link'>-->
+<!--						<a class="btn btn-confirm" target="_blank" href="https://arxiv.org/pdf/1912.07863.pdf">PDF</a>-->
+<!--						<a class="btn btn-confirm" target="_blank" href="https://github.com/TAMU-VITA/FAT">Code</a>-->
+<!--					  </div>-->
+<!--					</div>-->
+<!--				</div>-->
 	
 
 
@@ -149,3 +168,4 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
 
 </ul></div></body></html>
+
