--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
 
 
-<h2><font face="Arial"> Publications </font></h2>
+<h2><font face="Arial"> Publication </font></h2>
 <!--<ul style="list-style-type:none">-->
 	<ul style="list-style:none;margin:0px;padding:0px;">
 <!--<p><font face="Arial">Summary: IEEE Transactions [2], CVPR [2].</font></p>
