--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
 <meta name="keywords" content="Jialian Wu, State University of New York at Buffalo">
 <meta name="description" content="Jialian Wu&#39;s home page">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
@@ -54,7 +54,7 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
 
 
-<h2><font face="Arial"> Publication </font></h2>
+<h2><font face="Arial"> Publications </font></h2>
 <!--<ul style="list-style-type:none">-->
 	<ul style="list-style:none;margin:0px;padding:0px;">
 <!--<p><font face="Arial">Summary: IEEE Transactions [2], CVPR [2].</font></p>
