--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 
 
 
-<h2><font face="Arial"> Publication </font></h2>
+<h2><font face="Arial"> Publications </font></h2>
 <!--<ul style="list-style-type:none">-->
 	<ul style="list-style:none;margin:0px;padding:0px;">
 <!--<p><font face="Arial">Summary: IEEE Transactions [2], CVPR [2].</font></p>
@@ -156,7 +156,7 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
          </li>
 	
 	<center>
-	<a href="http://www.clustrmaps.com/map/Jialianwu.com" title="Visit tracker for Jialianwu.com"><img src="//www.clustrmaps.com/map_v2.png?d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU" /></a>
+		<a href="https://clustrmaps.com/site/1bca3" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=5_NGtk26dqmCmuXbnUDXFocM514zOxXJ7W6oUtc_RXU&co=2d78ad&ct=ffffff" /></a>
 	</center>
 	
 	<p></p><center><font face="Arial">
