--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@ I received B.Eng. degree from Tianjin University in 2018. My current research in
 <ul style="list-style-type:none">
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Conference Reviews </strong> <br> </font> </p> 
+              <strong> Conference Reviewer </strong> <br> </font> </p>
 	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
 		 CVPR 2020, WACV 2021, ACCV 2020
 	      </font> </p> 
          </li>
 	
 	<li> <p style="margin-left: 0px; line-height: 120%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
-              <strong> Journal Reviews </strong> <br> </font> </p> 
+              <strong> Journal Reviewer </strong> <br> </font> </p>
 	      <p style="margin-left: 20px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3">
 		 IEEE Transactions on Image Processing
 	      </font> </p> 
