--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<!---start-logo--->
 			<div class="logo">
-				<a href="#">Wuyang Chen</a>
+				<a href="#">Jialian Wu</a>
 			</div>
 			<!---End-logo--->
 			<!---start-top-nav--->
@@ -61,10 +61,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="content">
 		<div class="grid1" id="me">
 			<div class="welcome-photo">
-				<img src="./images/Wuyang_Chen.png" title="name" />
+				<img src="./images/jialian.jpg" title="name" />
 				<!-- <a class="welcome-photo1"><img id="me1" src="./images/Wuyang_Chen.png" title="name" /></a> -->
 			</div>
-			<h3>Hi, I'm Wuyang Chen</h3>
+			<h3>Jialian Wu</h3>
 			<p>
 				I'm a Ph.D. student in <a target="_blank" href="https://engineering.tamu.edu/cse/index.html">Computer Science at Texas A&M University</a>
 				<br>
